--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -27,6 +27,7 @@
     <color name="name_aggressive">#B78B0A</color>
     <color name="pdlg_color_green">#00CB00</color>
     <color name="red">#FC0000</color>
+    <color name="color_efefef">#efefef</color>
 
     <color name="bg_img_color">#D1F3F5</color>
     <color name="disclaimer_color">#4185c9</color>
