--- a/app/src/main/res/layout/fragment_payment_mode.xml
+++ b/app/src/main/res/layout/fragment_payment_mode.xml
@@ -81,12 +81,36 @@
                 android:orientation="vertical"
                 android:padding="@dimen/space_16">
 
+                <com.google.android.material.textfield.TextInputLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:textColorHint="@color/color_light_violet">
+
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/edtHowToPay"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="@dimen/space_16"
+                        android:drawableEnd="@drawable/ic_drop_down_semi_black_24dp"
+                        android:editable="false"
+                        android:focusable="false"
+                        android:focusableInTouchMode="false"
+                        android:hint="@string/how_would_you_like_to_pay"
+                        android:text="@{vm.selectedPaymentType}"
+                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
+                        android:textColorHint="@color/color_light_violet"
+                        tools:text="UPI" />
+
+                </com.google.android.material.textfield.TextInputLayout>
+
+
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/how_would_you_like_to_pay"
                     android:textAppearance="@style/TextAppearance.AppCompat.Small"
-                    android:textColor="@color/black" />
+                    android:textColor="@color/black"
+                    android:visibility="gone" />
 
                 <RadioGroup
                     android:layout_width="wrap_content"
@@ -94,7 +118,8 @@
                     android:layout_marginTop="@dimen/space_16"
                     android:layout_marginBottom="@dimen/space_16"
                     android:background="@drawable/dr_bg_payment_border"
-                    android:orientation="horizontal">
+                    android:orientation="horizontal"
+                    android:visibility="gone">
 
                     <RadioButton
                         android:id="@+id/rb_netbanking"
@@ -238,7 +263,8 @@
                     android:layout_height="wrap_content"
                     android:text="@{vm.introduction}"
                     android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
-                    android:textColor="@color/darker_gray" />
+                    android:textColor="@color/darker_gray"
+                    android:visibility="@{vm.isUPI() ?View.GONE :View.VISIBLE}" />
 
                 <TextView
                     android:layout_width="match_parent"
@@ -264,6 +290,39 @@
                     android:text="@={vm.utrNumber}"
                     android:textAppearance="@style/TextAppearance.AppCompat.Small"
                     android:visibility="@{vm.isNEFTRTGS==true?View.VISIBLE:View.GONE}" />
+
+
+                <ImageView
+                    android:layout_width="@dimen/_50sdp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="@dimen/space_3"
+                    android:layout_marginTop="@dimen/space_16"
+                    android:adjustViewBounds="true"
+                    android:src="@drawable/ic_upi"
+                    android:visibility="@{vm.isUPI==true?View.VISIBLE:View.GONE}" />
+
+                <com.google.android.material.textfield.TextInputLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginTop="@dimen/space_8"
+                    android:textColorHint="@color/color_light_violet"
+                    android:visibility="@{vm.isUPI==true?View.VISIBLE:View.GONE}"
+                    app:hintTextColor="@color/color_light_violet">
+
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/edtUPI"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:hint="@string/enter_your_upi_id_vpa"
+                        android:maxLines="1"
+                        android:singleLine="true"
+                        android:text="@{vm.upiName}"
+                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
+                        android:textColorHint="@color/color_light_violet"
+                        tools:text="UPI" />
+
+                </com.google.android.material.textfield.TextInputLayout>
+
 
             </LinearLayout>
 
