--- a/app/src/main/res/layout/fragment_assessment_q.xml
+++ b/app/src/main/res/layout/fragment_assessment_q.xml
@@ -108,7 +108,7 @@
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/lato_semibold"
                     android:text="@string/estimated_total_value"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                     android:textColor="@color/semi_black"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
@@ -144,7 +144,7 @@
                         android:imeOptions="actionDone"
                         android:inputType="number"
                         android:nextFocusForward="@+id/edtDurations"
-                        android:padding="@dimen/_6sdp"
+                        android:padding="@dimen/_4sdp"
                         android:text="@={item.totalValue}"
                         android:textAppearance="@style/TextAppearance.AppCompat.Small"
                         android:textColor="@color/semi_black"
