--- a/app/src/main/res/layout/fragment_upi_step.xml
+++ b/app/src/main/res/layout/fragment_upi_step.xml
@@ -31,7 +31,7 @@
                     android:id="@+id/rlSteps"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/_20sdp"
+                    android:layout_marginTop="@dimen/_16sdp"
                     android:background="@color/colorPrimary">
 
 
@@ -64,7 +64,6 @@
                             android:id="@+id/tvLblFollow"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_marginTop="@dimen/_8sdp"
                             android:fontFamily="@font/lato_bold"
                             android:gravity="center"
                             android:text="@string/follow_the_below_steps_to_complete_n_your_payment"
@@ -77,7 +76,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="@dimen/_20sdp"
-                            android:layout_marginTop="@dimen/_10sdp"
+                            android:layout_marginTop="@dimen/_6sdp"
                             android:layout_marginRight="@dimen/_20sdp">
 
 
@@ -90,8 +89,8 @@
                                 android:gravity="center"
                                 android:padding="@dimen/_16sdp"
                                 android:text="@string/open_your_upi_app"
-                                android:textColor="@color/black"
-                                android:textSize="@dimen/_11sdp" />
+                                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+                                android:textColor="@color/black" />
 
                             <androidx.appcompat.widget.AppCompatTextView
                                 android:layout_width="40dp"
@@ -133,8 +132,8 @@
                                 android:gravity="center"
                                 android:padding="@dimen/_16sdp"
                                 android:text="@string/accept_the_collect_request_sent_from_indian_clearing_corporation_bse_star_mf_india"
-                                android:textColor="@color/black"
-                                android:textSize="@dimen/_11sdp" />
+                                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+                                android:textColor="@color/black" />
 
                             <androidx.appcompat.widget.AppCompatTextView
                                 android:id="@+id/tvLblStep1round"
@@ -174,8 +173,8 @@
                                 android:gravity="center"
                                 android:padding="@dimen/_16sdp"
                                 android:text="@string/upon_acceptance_the_payment_will_be_mapped_against_your_order"
-                                android:textColor="@color/black"
-                                android:textSize="@dimen/_11sdp" />
+                                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+                                android:textColor="@color/black" />
 
                             <androidx.appcompat.widget.AppCompatTextView
                                 android:layout_width="40dp"
@@ -210,8 +209,8 @@
             android:paddingTop="@dimen/space_16"
             android:paddingBottom="@dimen/space_16"
             android:text="@string/please_do_not_close_the_app_until_you_naccept_the_collect_request"
-            android:textColor="@color/black"
-            android:textSize="@dimen/_10sdp" />
+            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+            android:textColor="@color/black" />
 
     </RelativeLayout>
 </layout>
