--- a/app/src/main/res/drawable/ic_send_msg.xml
+++ b/app/src/main/res/drawable/ic_send_msg.xml
@@ -1,4 +1,9 @@
-<vector android:height="32dp" android:viewportHeight="31.7"
-    android:viewportWidth="27.25" android:width="27dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#76C750" android:pathData="M27.17,6.17L23.04,25.5c-0.16,0.69 -0.44,1.12 -0.82,1.31c-0.39,0.18 -0.86,0.11 -1.43,-0.21l-6.26,-4.62l-3.04,2.92c-0.2,0.2 -0.36,0.34 -0.49,0.43c-0.2,0.12 -0.47,0.18 -0.79,0.18l0.49,-6.38L22.31,8.6c0.16,-0.12 0.21,-0.23 0.15,-0.33c-0.06,-0.1 -0.18,-0.14 -0.36,-0.12c-0.18,0.02 -0.38,0.09 -0.58,0.21L7.18,17.42l-6.2,-1.94c-0.69,-0.2 -1.01,-0.51 -0.97,-0.91c0.04,-0.4 0.47,-0.77 1.28,-1.09l24.13,-9.3c0.61,-0.2 1.09,-0.13 1.46,0.21C27.23,4.72 27.33,5.32 27.17,6.17z"/>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="27dp"
+    android:height="32dp"
+    android:viewportWidth="27.25"
+    android:viewportHeight="31.7">
+    <path
+        android:fillColor="#76C750"
+        android:pathData="M27.17,6.17L23.04,25.5c-0.16,0.69 -0.44,1.12 -0.82,1.31c-0.39,0.18 -0.86,0.11 -1.43,-0.21l-6.26,-4.62l-3.04,2.92c-0.2,0.2 -0.36,0.34 -0.49,0.43c-0.2,0.12 -0.47,0.18 -0.79,0.18l0.49,-6.38L22.31,8.6c0.16,-0.12 0.21,-0.23 0.15,-0.33c-0.06,-0.1 -0.18,-0.14 -0.36,-0.12c-0.18,0.02 -0.38,0.09 -0.58,0.21L7.18,17.42l-6.2,-1.94c-0.69,-0.2 -1.01,-0.51 -0.97,-0.91c0.04,-0.4 0.47,-0.77 1.28,-1.09l24.13,-9.3c0.61,-0.2 1.09,-0.13 1.46,0.21C27.23,4.72 27.33,5.32 27.17,6.17z" />
 </vector>
