Fixes minor bugs and uploaded build

--- a/app/src/main/res/layout/row_transaction_list_status.xml
+++ b/app/src/main/res/layout/row_transaction_list_status.xml
@@ -83,6 +83,7 @@
             android:layout_alignParentEnd="true"
             android:elevation="@dimen/space_2"
             android:gravity="center"
+            android:ellipsize="end"
             android:paddingStart="@dimen/space_12"
             android:paddingTop="@dimen/space_8"
             android:paddingEnd="@dimen/space_12"
