[IMP]#112 - Payment mode alert msg changes - Add Select place holder text when selecting payment mode

--- a/app/src/main/res/layout/fragment_payment_mode.xml
+++ b/app/src/main/res/layout/fragment_payment_mode.xml
@@ -262,7 +262,7 @@
                     android:text="@{vm.introduction}"
                     android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                     android:textColor="@color/darker_gray"
-                    android:visibility="@{vm.isUPI() ?View.GONE :View.VISIBLE}" />
+                    android:visibility="@{vm.isNetBanking() || vm.isNEFTRTGS()  ?View.VISIBLE :View.GONE}" />
 
                 <TextView
                     android:layout_width="match_parent"
