--- a/app/src/main/res/layout/fragment_tarrakki_zyaada.xml
+++ b/app/src/main/res/layout/fragment_tarrakki_zyaada.xml
@@ -65,7 +65,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     app:el_duration="500"
-                    app:el_expanded="true"
+                    app:el_expanded="false"
                     app:expanded="@{vm.whatIsTarrakkiZyaada}">
 
                     <TextView
@@ -125,6 +125,120 @@
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginTop="@dimen/default_space"
+                android:background="@drawable/shape_cart_view"
+                android:elevation="@dimen/space_2"
+                android:orientation="vertical"
+                android:padding="8dp">
+
+                <TextView
+                    android:id="@+id/tvHReturn"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/lato_semibold"
+                    android:text="@string/historical_returns"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
+                    android:textColor="@android:color/black"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <TextView
+                    android:id="@+id/tvInvestmentAmountL"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/default_space"
+                    android:text="@string/investment_amount"
+                    android:textColor="@color/semi_black"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/tvHReturn" />
+
+                <TextView
+                    android:id="@+id/tvInvestmentDurationL"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/default_space"
+                    android:text="@string/duration"
+                    android:textColor="@color/semi_black"
+                    app:layout_constraintStart_toEndOf="@+id/guideline7"
+                    app:layout_constraintTop_toBottomOf="@id/tvHReturn" />
+
+                <LinearLayout
+                    android:id="@+id/llContainer"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/space_8"
+                    android:layout_marginEnd="@dimen/default_space"
+                    android:background="@drawable/shape_rounded_gray"
+                    android:gravity="center_vertical"
+                    android:orientation="horizontal"
+                    android:padding="@dimen/space_8"
+                    app:layout_constraintEnd_toStartOf="@id/guideline7"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/tvInvestmentAmountL">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="@dimen/space_4"
+                        android:layout_marginEnd="@dimen/space_4"
+                        android:text="@string/rs_symbol"
+                        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+                        android:textColor="@color/semi_black" />
+
+                    <EditText
+                        android:id="@+id/edtInvestAmount"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="@null"
+                        android:inputType="number"
+                        android:text="5,00,000"
+                        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+                        android:textColor="@color/semi_black" />
+
+                </LinearLayout>
+
+                <androidx.constraintlayout.widget.Guideline
+                    android:id="@+id/guideline7"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:visibility="visible"
+                    app:layout_constraintGuide_percent="0.48" />
+
+                <TextView
+                    android:id="@+id/tvDurations"
+                    android:layout_width="wrap_content"
+                    android:layout_height="0dp"
+                    android:layout_marginTop="@dimen/space_8"
+                    android:background="@drawable/shape_rounded_gray"
+                    android:drawableEnd="@drawable/ic_drop_down_dark_gray_24dp"
+                    android:gravity="center"
+                    android:minWidth="@dimen/_100sdp"
+                    android:paddingStart="@dimen/default_space"
+                    android:paddingEnd="@dimen/default_space"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+                    android:textColor="@color/semi_black"
+                    app:layout_constraintBottom_toBottomOf="@id/llContainer"
+                    app:layout_constraintStart_toEndOf="@id/guideline7"
+                    app:layout_constraintTop_toBottomOf="@id/tvInvestmentDurationL"
+                    tools:text="3 Years" />
+
+                <com.github.mikephil.charting.charts.BarChart
+                    android:id="@+id/mBarChart"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/_188sdp"
+                    android:layout_marginTop="@dimen/default_space"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/tvDurations" />
+
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/default_space"
                 android:background="@drawable/shape_cart_view"
@@ -133,14 +247,25 @@
                 android:padding="8dp">
 
 
+                <TextView
+                    android:id="@+id/tvPowered_by_tarrrakki"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/lato_bold"
+                    android:text="@string/powered_by_tarrakki_reliance_mutual_fund_and_visa"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
                 <include
                     android:id="@+id/hScrollView"
                     layout="@layout/tbl_tarrakki_zyaada"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/default_space"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
+                    app:layout_constraintTop_toBottomOf="@id/tvPowered_by_tarrrakki" />
 
                 <TextView
                     android:id="@+id/tvSymbol1"
@@ -190,6 +315,7 @@
                     android:text="@string/daily_purchase_limit_of_50"
                     android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                     android:textStyle="italic"
+                    android:textSize="@dimen/_8ssp"
                     app:layout_constraintBaseline_toBaselineOf="@id/tvSymbol1"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@id/barrier"
@@ -204,6 +330,7 @@
                     android:text="@string/upto_50_of_the_balance_or_up"
                     android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                     android:textStyle="italic"
+                    android:textSize="@dimen/_8ssp"
                     app:layout_constraintBaseline_toBaselineOf="@id/tvSymbol2"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@id/barrier"
@@ -218,24 +345,13 @@
                     android:text="@string/upto_u20b950_000_or_90_of"
                     android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                     android:textStyle="italic"
+                    android:textSize="@dimen/_8ssp"
+                    android:layout_marginBottom="@dimen/default_space"
                     app:layout_constraintBaseline_toBaselineOf="@id/tvSymbol3"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@id/barrier"
                     app:layout_constraintTop_toBottomOf="@id/tvD2"
                     tools:layout_constraintStart_toEndOf="@id/tvSymbol3" />
-
-
-                <TextView
-                    android:id="@+id/tvPowered_by_tarrrakki"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/default_space"
-                    android:layout_marginBottom="@dimen/default_space"
-                    android:fontFamily="@font/lato_bold"
-                    android:text="@string/powered_by_tarrakki_reliance_mutual_fund_and_visa"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/tvD3" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -359,120 +475,6 @@
                     app:layout_constraintEnd_toEndOf="@id/ivB3"
                     app:layout_constraintStart_toStartOf="@id/ivB3"
                     app:layout_constraintTop_toBottomOf="@id/ivB3" />
-
-
-            </androidx.constraintlayout.widget.ConstraintLayout>
-
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginTop="@dimen/default_space"
-                android:background="@drawable/shape_cart_view"
-                android:elevation="@dimen/space_2"
-                android:orientation="vertical"
-                android:padding="8dp">
-
-                <TextView
-                    android:id="@+id/tvHReturn"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:fontFamily="@font/lato_semibold"
-                    android:text="@string/historical_returns"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
-                    android:textColor="@android:color/black"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
-
-                <TextView
-                    android:id="@+id/tvInvestmentAmountL"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/default_space"
-                    android:text="@string/investment_amount"
-                    android:textColor="@color/semi_black"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/tvHReturn" />
-
-                <TextView
-                    android:id="@+id/tvInvestmentDurationL"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/default_space"
-                    android:text="@string/duration"
-                    android:textColor="@color/semi_black"
-                    app:layout_constraintStart_toEndOf="@+id/guideline7"
-                    app:layout_constraintTop_toBottomOf="@id/tvHReturn" />
-
-                <LinearLayout
-                    android:id="@+id/llContainer"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/space_8"
-                    android:layout_marginEnd="@dimen/default_space"
-                    android:background="@drawable/shape_rounded_gray"
-                    android:gravity="center_vertical"
-                    android:orientation="horizontal"
-                    android:padding="@dimen/space_8"
-                    app:layout_constraintEnd_toStartOf="@id/guideline7"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/tvInvestmentAmountL">
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="@dimen/space_4"
-                        android:layout_marginEnd="@dimen/space_4"
-                        android:text="@string/rs_symbol"
-                        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
-                        android:textColor="@color/semi_black" />
-
-                    <EditText
-                        android:id="@+id/edtInvestAmount"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:background="@null"
-                        android:inputType="number"
-                        android:text="5,00,000"
-                        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
-                        android:textColor="@color/semi_black" />
-
-                </LinearLayout>
-
-                <androidx.constraintlayout.widget.Guideline
-                    android:id="@+id/guideline7"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:visibility="visible"
-                    app:layout_constraintGuide_percent="0.48" />
-
-                <TextView
-                    android:id="@+id/tvDurations"
-                    android:layout_width="wrap_content"
-                    android:layout_height="0dp"
-                    android:layout_marginTop="@dimen/space_8"
-                    android:background="@drawable/shape_rounded_gray"
-                    android:drawableEnd="@drawable/ic_drop_down_dark_gray_24dp"
-                    android:gravity="center"
-                    android:minWidth="@dimen/_100sdp"
-                    android:paddingStart="@dimen/default_space"
-                    android:paddingEnd="@dimen/default_space"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
-                    android:textColor="@color/semi_black"
-                    app:layout_constraintBottom_toBottomOf="@id/llContainer"
-                    app:layout_constraintStart_toEndOf="@id/guideline7"
-                    app:layout_constraintTop_toBottomOf="@id/tvInvestmentDurationL"
-                    tools:text="3 Years" />
-
-                <com.github.mikephil.charting.charts.BarChart
-                    android:id="@+id/mBarChart"
-                    android:layout_width="match_parent"
-                    android:layout_height="@dimen/_188sdp"
-                    android:layout_marginTop="@dimen/default_space"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/tvDurations" />
 
 
             </androidx.constraintlayout.widget.ConstraintLayout>
